--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://YashaswiniHU.github.io/my-portfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -38,9 +39,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0",
-    "homepage": "https://YashaswiniHU.github.io/my-portfolio"
-
-
+    "gh-pages": "^6.2.0"
   }
 }
